# mlxrs

./: .codecov.yml  .gitignore  .gitmodules  AUDIT_PHASE2_3_REPORT.md  AUDIT_REPORT.md  CHANGELOG.md  Cargo.toml  QUALITY_INSPECTION_PLAN_R2.md  QUALITY_INSPECTION_R2_REPORT.md  QUALITY_INSPECTION_REPORT.md  README.md
.cargo/: config.toml
coreml-spike/: Cargo.toml  FINDINGS.md
coreml-spike/src/: main.rs
mlxrs/: Cargo.toml  build.rs
mlxrs-sys/: Cargo.toml  build.rs  wrapper.h
mlxrs-sys/shim/: mlxrs_shim.cpp
mlxrs-sys/src/: lib.rs
mlxrs/benches/: arithmetic.rs  linalg.rs  reduction.rs  shape.rs  simd_bgr_widen.rs  simd_lfilter.rs  simd_pad_canvas_fill.rs  simd_pcm_decode.rs  simd_quantize.rs  simd_rgb_widen.rs  simd_siglip_normalize.rs
mlxrs/data/tokenizer/: bpe_space_matches.toml  tool_parsers.toml
mlxrs/data/tokenizer/chat_template_overrides/: deepseek_v32.jinja
mlxrs/src/: device.rs  diagnostics.rs  dtype.rs  error.rs  io.rs  lib.rs  memory.rs  ops_traits.rs  shape.rs  stream.rs  version.rs
mlxrs/src/array/: construction.rs  conversion.rs  mod.rs  ops_impl.rs  shared.rs
mlxrs/src/array/ops_impl/: arithmetic.rs  comparison.rs  fft.rs  indexing.rs  linalg_basic.rs  linalg_full.rs  logical.rs  misc.rs  mod.rs  random.rs  reduction.rs  shape.rs
mlxrs/src/audio/: dsp.rs  features.rs  io.rs  load.rs  mod.rs
mlxrs/src/audio/codec/: load.rs  mod.rs
mlxrs/src/audio/dsp/: tests.rs
mlxrs/src/audio/features/: tests.rs
mlxrs/src/audio/io/: tests.rs
mlxrs/src/audio/lid/: load.rs  mod.rs  output.rs
mlxrs/src/audio/load/: tests.rs
mlxrs/src/audio/playback/: config.rs  mod.rs  output_stream.rs  player.rs
mlxrs/src/audio/sts/: load.rs  mod.rs
mlxrs/src/audio/stt/: generate.rs  load.rs  mod.rs  model.rs  serializers.rs
mlxrs/src/audio/tts/: generate.rs  load.rs  mod.rs  model.rs  text_processor.rs
mlxrs/src/audio/vad/: load.rs  mod.rs  output.rs
mlxrs/src/embeddings/: colvision.rs  config.rs  embed.rs  encode.rs  factory.rs  fast.rs  mod.rs  model.rs  normalize.rs  pooling.rs  similarity.rs
mlxrs/src/embeddings/clap/: audio.rs  config.rs  mel.rs  mod.rs  shared.rs  tests.rs  text.rs
mlxrs/src/embeddings/colvision/: tests.rs
mlxrs/src/embeddings/embeddinggemma/: backbone.rs  config.rs  dense.rs  mod.rs  shared.rs  tests.rs
mlxrs/src/embeddings/encode/: tests.rs
mlxrs/src/embeddings/factory/: tests.rs
mlxrs/src/embeddings/pooling/: tests.rs
mlxrs/src/embeddings/siglip2_naflex/: config.rs  mod.rs  processing.rs  shared.rs  tests.rs  text.rs  vision.rs
mlxrs/src/ffi/: mod.rs
mlxrs/src/io/: npy.rs  tests.rs
mlxrs/src/io/npy/: tests.rs
mlxrs/src/lm/: cache.rs  cache_prompt.rs  convert.rs  factory.rs  fuse.rs  generate.rs  gguf.rs  load.rs  lora.rs  mod.rs  model.rs  perplexity.rs  quant.rs  sample.rs  session.rs  speculative.rs  stop.rs  structured.rs
mlxrs/src/lm/cache/: arrays.rs  batch.rs  batch_rotating.rs  cache_list.rs  chunked.rs  mask.rs  mod.rs  persist.rs  prompt.rs  quantized.rs  rotating.rs  standard.rs  util.rs
mlxrs/src/lm/cache_prompt/: tests.rs
mlxrs/src/lm/factory/: tests.rs
mlxrs/src/lm/generate/: batch_tests.rs  stop_sequence_tests.rs  tests.rs
mlxrs/src/lm/gguf/: tests.rs
mlxrs/src/lm/load/: save_tests.rs
mlxrs/src/lm/lora/: tests.rs
mlxrs/src/lm/models/: mod.rs
mlxrs/src/lm/nn/: activations.rs  attention.rs  mod.rs  norm.rs  rope.rs  rope_scaling.rs  switch.rs
mlxrs/src/lm/perplexity/: tests.rs
mlxrs/src/lm/quant/: tests.rs
mlxrs/src/lm/session/: tests.rs
mlxrs/src/lm/structured/: tests.rs
mlxrs/src/lm/tool_parsers/: mod.rs
mlxrs/src/lm/tuner/: datasets.rs  losses.rs  mod.rs  trainer.rs
mlxrs/src/memory/: counters.rs  mod.rs  policies.rs  wired.rs
mlxrs/src/model_validation/: mod.rs  tests.rs
mlxrs/src/nn/: mod.rs  quantized.rs
mlxrs/src/nn/quantized/: tests.rs
mlxrs/src/ops/: arithmetic.rs  comparison.rs  conv.rs  fft.rs  indexing.rs  interpolation.rs  linalg_basic.rs  linalg_full.rs  logical.rs  misc.rs  mod.rs  quantized.rs  random.rs  reduction.rs  shape.rs
mlxrs/src/ops/fast/: metal_kernel.rs  mod.rs
mlxrs/src/ops/interpolation/: tests.rs
mlxrs/src/ops/linalg_basic/: tests.rs
mlxrs/src/simd/: diff.rs  mod.rs
mlxrs/src/simd/arch/: mod.rs  neon.rs
mlxrs/src/simd/audio/: kaldi_mel.rs  lfilter.rs  mel_triangle.rs  mod.rs  pcm_decode.rs  quantize.rs  resample.rs  window.rs
mlxrs/src/simd/dispatch/: dot.rs  mod.rs
mlxrs/src/simd/scalar/: dot.rs  mod.rs
mlxrs/src/simd/vlm/: bgr_widen.rs  mod.rs  pad_canvas_fill.rs  rgb_widen.rs  rgba_to_rgb_affine.rs  rotate_buf.rs
mlxrs/src/tokenizer/: chat.rs  encode_options.rs  generated.rs  mod.rs  sentencepiece.rs  stream.rs  tools.rs  wrapper.rs
mlxrs/src/transforms/: autograd.rs  checkpoint.rs  closure.rs  compile.rs  custom.rs  eval.rs  mod.rs
mlxrs/src/vlm/: feature_cache.rs  generate.rs  image.rs  inputs.rs  load.rs  mod.rs  model.rs  prompt.rs  resize.rs  video.rs
mlxrs/tests/: archetypes.rs  array_construction.rs  array_conversion.rs  array_explicit_eval.rs  audio_dsp.rs  audio_g2p.rs  audio_io.rs  audio_playback.rs  audio_streaming_stt.rs  audio_sts_pipeline.rs  audio_stt.rs  audio_stt_serializers.rs  audio_tts.rs  audit_safety_tests.rs  clap_e2e_parity.rs  compile.rs  diagnostics.rs  element_extended.rs  embeddings.rs  embeddings_load.rs  error_paths.rs  io.rs  kv_cache_from_serialized.rs  lm_cache.rs  lm_cache_arrays.rs  lm_cache_batch.rs  lm_cache_cache_list.rs  lm_cache_chunked.rs  lm_cache_invariant_regressions.rs  lm_cache_p4_kvc_regressions.rs  lm_cache_persist.rs  lm_cache_prompt.rs  lm_cache_prompt_driver.rs  lm_cache_quantized.rs  lm_cache_reference_class_name.rs  lm_convert.rs  lm_fuse.rs  lm_generate.rs  lm_load.rs  lm_sample.rs  (+53 more)
mlxrs/tests/fixtures/: audio_tone.flac  tokenizer.json  tokenizer_config.json  tokenizer_template.json
mlxrs/tests/ui-tests/: no_send.rs  no_send.stderr  no_sync.rs  no_sync.stderr  sealed_into_shape.rs  sealed_into_shape.stderr  stream_no_send.rs  stream_no_send.stderr  stream_no_sync.rs  stream_no_sync.stderr
xtask/: Cargo.toml
xtask/src/: codegen.rs  main.rs
(+162 files in other folders)
