[workspace]
members = [
  "mlxrs",
  "mlxrs-sys",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/fintit-ai/mlxrs"
homepage = "https://github.com/fintit-ai/mlxrs"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
mlxrs-sys = { path = "mlxrs-sys" }

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
] }

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
