[workspace]
members = [
  "mlxrs",
  "mlxrs-sys",
  "xtask",
]
# `xtask` is a maintainer-only build/codegen helper, not a shipped crate.
# Excluding it from `default-members` keeps a bare `cargo build` / `cargo
# test` / CI default invocation from compiling it (and, transitively, its
# heavy optional codegen deps). It stays a full `members` entry so explicit
# `cargo run -p xtask -- …` and `--workspace` still build it.
default-members = [
  "mlxrs",
  "mlxrs-sys",
]
resolver = "3"

[workspace.package]
repository = "https://github.com/fintit-ai/mlxrs"
homepage = "https://github.com/fintit-ai/mlxrs"
edition = "2024"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
mlxrs-sys = { path = "mlxrs-sys", version = "0.1" }
thiserror = "2"
half = "2"
smallvec = "1"
approx = "0.5"
static_assertions = "1"
ctor = "1"
trybuild = "1"
bindgen = "0.72"
cmake = "0.1"
walkdir = "2"

[workspace.lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  # `mlxrs::simd` force-scalar escape: `RUSTFLAGS="--cfg mlxrs_force_scalar"`
  # routes the SIMD dispatchers through the scalar path on a NEON-capable
  # host (regression bisection / exotic-target builds).
  'cfg(mlxrs_force_scalar)',
] }

[workspace.lints.clippy]
# Every hand-written `unsafe {}` block must carry a `// SAFETY:` comment.
# Generated bindgen output (mlxrs-sys/src/generated) is exempt via the
# scoped `#[allow]` on that private module — it has no `unsafe {}` blocks
# today, but the scoped allow keeps a future regen from tripping this.
undocumented_unsafe_blocks = "deny"
redundant_clone = "deny"
needless_collect = "deny"
unnecessary_to_owned = "deny"
redundant_allocation = "deny"
needless_pass_by_value = "deny"
large_types_passed_by_value = "deny"
unnecessary_wraps = "deny"
map_clone = "deny"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
