[package]
name = "mlxrs-sys"
version = "0.1.0"
description = "Bindings for MLX-C API"
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
links = "mlxc"

[build-dependencies]
cmake.workspace = true
walkdir.workspace = true
bindgen = { workspace = true, optional = true }

[features]
default = []
buildtime_bindgen = ["dep:bindgen"]

[lints]
workspace = true
