[package]
name = "mlxrs-sys"
version = "0.1.0"
description = "Bindings for MLX-C API"
repository.workspace = true
homepage.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
links = "mlxc"

[build-dependencies]
cmake.workspace = true
walkdir.workspace = true

# No buildtime bindgen feature in M1 — pre-committed bindings are the
# canonical path. Regen via `cargo run -p xtask -- regen-bindings`. M2
# can re-add `buildtime_bindgen` if a use case appears (would require
# wiring a bindgen call into build.rs).

[lints]
workspace = true
