[package]
name = "mlxrs"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/mlxrs"
description = "Safe Rust bindings for Apple's MLX array framework, with LM, VLM, audio, and embeddings support"
keywords = ["mlx", "apple-silicon", "machine-learning", "metal", "llm"]
categories = ["science", "api-bindings", "external-ffi-bindings", "mathematics"]
license.workspace = true
rust-version.workspace = true

[features]
default = []
tokenizer            = ["dep:tokenizers"]                                          # HfTokenizer load + encode/decode + special tokens from tokenizer.json. NO serde_json/minijinja.
tokenizer-config     = ["tokenizer", "dep:serde_json"]                             # parse tokenizer_config.json → bos/eos/unk/chat_template/added-tokens
tokenizer-stream     = ["tokenizer"]                                               # StreamingDetokenizer trait + NaiveStreamingDetokenizer (no serde_json)
tokenizer-gpt2       = []                                                          # GPT-2 bytes↔unicode table (committed cargo-xtask-codegen artifact)
tokenizer-bpe        = ["tokenizer-stream", "tokenizer-gpt2", "dep:serde_json"]    # GPT-2 byte-level streaming detok + decoder-class inference
tokenizer-spm        = ["tokenizer-stream", "dep:serde_json"]                      # SentencePiece (+no-space) streaming detok + decoder-class inference
tokenizer-chat       = ["tokenizer-config", "dep:minijinja", "dep:minijinja-contrib", "dep:serde", "dep:jiff"]   # jinja apply_chat_template (jiff: strftime_now)
tokenizer-deepseek-v32 = ["tokenizer-chat"]                                        # the one shipped chat-template override
tokenizer-tools      = ["tokenizer-config", "dep:serde_json"]                      # tool-call parsers + infer_tool_parser

embeddings           = ["tokenizer", "dep:memspan", "dep:glob"]
lm                   = ["tokenizer-config", "tokenizer-stream", "tokenizer-spm", "tokenizer-bpe", "tokenizer-chat", "tokenizer-deepseek-v32", "tokenizer-tools", "dep:regex"]
llguidance           = ["lm", "dep:llguidance", "dep:toktrie_hf_tokenizers", "dep:serde_json"]
vlm                  = ["lm", "dep:image"]
audio                = ["lm", "dep:symphonia", "dep:cpal", "dep:unicode-normalization", "dep:xattr"]
unstable-ops-overload = []
gguf                 = []

[dependencies]
mlxrs-sys.workspace = true
thiserror.workspace = true
half.workspace = true
smallvec.workspace = true
smol_str = "0.3"
static_assertions.workspace = true
ctor.workspace = true
derive_more.workspace = true
libc = "0.2" # SIGABRT diagnostics handler (diagnostics.rs)
tokenizers = { version = "0.23", default-features = false, features = ["onig"], optional = true }
minijinja = { version = "2", features = ["loader", "json", "loop_controls", "builtins", "preserve_order"], optional = true }
minijinja-contrib = { version = "2", features = ["pycompat"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true, features = ["preserve_order"] }
memspan = { version = "0.1", optional = true }
glob = { version = "0.3", optional = true }
jiff = { version = "0.2", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"], optional = true }
symphonia = { version = "0.6", optional = true, default-features = false, features = [
  "wav",
  "pcm",
  "mp3",
  "flac",
  "ogg",
  "vorbis",
] }
cpal = { version = "0.17", optional = true }
unicode-normalization = { version = "0.1", optional = true }
regex = { version = "1", optional = true, default-features = false, features = ["std", "perf"] }
llguidance = { version = "1.7", optional = true, default-features = false, features = ["lark", "referencing"] }
toktrie_hf_tokenizers = { version = "1.7", optional = true }

[target.'cfg(unix)'.dependencies]
xattr = { version = "1", optional = true }

[dev-dependencies]
approx.workspace = true
trybuild.workspace = true
criterion = "0.8"
libc = "0.2" # SIGABRT child-process test (tests/diagnostics.rs)

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "reduction"
harness = false

[[bench]]
name = "shape"
harness = false

[[bench]]
name = "linalg"
harness = false

[[bench]]
name = "simd_pad_canvas_fill"
harness = false
required-features = ["vlm"]

[[bench]]
name = "simd_bgr_widen"
harness = false
required-features = ["vlm"]

[[bench]]
name = "simd_quantize"
harness = false
required-features = ["audio"]

[[bench]]
name = "simd_rgb_widen"
harness = false
required-features = ["vlm"]

[[bench]]
name = "simd_pcm_decode"
harness = false
required-features = ["audio"]

[[bench]]
name = "simd_lfilter"
harness = false
required-features = ["audio"]
